--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,8 @@ img, video, audio {
 /* LAYOUT */
 
 * {
-  -webkitbox-sizing: border-box;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
